# tpark-c-hw2

./: .gitignor  .travis.yml  CMakeLists.txt  README.md  file_creation.c  file_creation.h  input_output.c  input_output.h  main.c
Google_tests/: CMakeLists.txt  tests.cpp
consist_static/: logic_consist.c  logic_consist.h
parallel_dynamic/: logic_parallel.c  logic_parallel.h
